--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Ankur Goel | Full Stack Developer</title>
-
-<link rel="stylesheet" href="css/style.css">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  <link rel="shortcut icon" href="assets/favicon.ico">
+  <link rel="stylesheet" href="css/style.css">
+  
 <script src="js/main.js" defer></script>
 
 </head>
