Updated linkedin url

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="card">
       <p><b>Email:</b> <a href="mailto:ankurgoel.1822@gmail.com">ankurgoel.1822@gmail.com</a></p>
       <p><b>Phone:</b> +91 9756932495</p>
-      <p><b>LinkedIn:</b> <a href="https://linkedin.com/in/ankurgoel" target="_blank">linkedin.com/in/ankurgoel</a></p>
+      <p><b>LinkedIn:</b> <a href="www.linkedin.com/in/ankur-goel-318816213" target="_blank">linkedin.com/in/ankurgoel</a></p>
       <p><b>Github:</b> <a href="https://github.com/AnkurGoel-15">github.com/ankur_goel</a>
     </div>
   </section>
